attempt again to fix video size on mobile

--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -153,6 +153,24 @@ h4.feature-title {
     height: 100%;
 }
 
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+}
+
+.video-container iframe,
+.video-container object,
+.video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 a {
     text-decoration: none;
     transition: all 0.2s ease;
